adds ToDoList class, not working tho

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,12 @@
     <title>To-Do List</title>
 </head>
 <body>
-
+    <header>
+        <nav>
+            <button>Home</button>
+            <button>About</button>
+            <button>Contact</button>
+        </nav>
+    </header>
 </body>
 </html>
