--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-            <button>Home</button>
+            <button id="home" >Home</button>
             <button>About</button>
             <button>Contact</button>
         </nav>
