adds populate project function to add project, todos, and tasks to the DOM

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,15 @@
 <body>
     <header>
         <nav>
-            <button id="home" >Home</button>
-            <button>About</button>
+            <button id="newProject" >New Project</button>
+            <button id="newToDo">New To Do</button>
             <button>Contact</button>
         </nav>
     </header>
+    <div class="container">
+        <div class="content">
+            <div class="todos"></div>
+        </div>
+    </div>
 </body>
 </html>
