moves code around in a more organized fashion, simplying file structure and approach

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         </header>
         <div class="content">
             <div class="sidebar">
-                <h2 class="sidebar-header">Projects</h2>
+                <h2 class="sidebar-header"></h2>
                 <label for="new-project">Start A New Project</label>
                 <div id="project-init-field">
                     <input id="new-project" type="text" placeholder="New Project">
@@ -21,7 +21,7 @@
                 <span class="project-list"></span>
             </div>
             <div class="todos">
-                <h2 class="tasks">Your Tasks</h2>
+                <span class="tasks"><h2>Your Tasks</h2></span>
             </div>
         </div>
     </div>
