double checking on repo functionality

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
                 <span class="project-list"></span>
             </div>
             <div class="todos">
-                <span class="tasks"><h2>Your Tasks</h2></span>
+                <span class="tasks-title"><h2></h2></span>
             </div>
         </div>
     </div>
