adds project printing to sidebar in dom

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
                     <input id="new-project" type="text" placeholder="New Project">
                     <input type="submit" value="+" id="new-project-init-input">
                 </div>
-                <span class="project-list"></span>
+                <ul class="project-list" id="project-list" ></ul>
             </div>
             <div id="tasks-container">
                 <span class="tasks-title"><h2></h2></span>
