--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
             </div>
             <div id="tasks-container">
                 <span class="tasks-title"><h2></h2></span>
+                <ul id="tasks-display"></ul>
             </div>
             <!-- Delete this form after wiring everything up correctly -->
             <div class="api-testing-form" id="api-testing-form">
