more sidebar styling and task bar styling

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,10 @@
                 <ul class="project-list" id="project-list" ></ul>
             </div>
             <div id="tasks-container">
-                <span class="tasks-header"><h2 class="tasks-title" id="tasks-title"></h2><button id="add-task">Add Task</button></span>
+                <div class="tasks-header">
+                    <h2 class="tasks-title" id="tasks-title"></h2>
+                    <button id="add-task">Add Task</button>
+                </div>
                 <ul id="tasks-display"></ul>
             </div>
             <div class="edit-task-form-container" id="edit-task-form-container">
