minor styling updates

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="edit-task-form-container" id="edit-task-form-container">
                 <div class="edit-task-form no-form-display" id="edit-task-form">
-                    <h2 style="color: green;">Popup Form Task Edit</h2> 
+                    <h2 style="color: green;">Edit Task</h2> 
                         <form class="form-container"> 
                             <label class="form-label" for="edit-name">Task Name</label> 
                             <input class="form-input" type="text" placeholder="Edit Task Name" 
@@ -58,7 +58,7 @@
             </div>
             <div class="new-task-form-container" id="new-task-form-container">
                 <div class="new-task-form no-form-display" id="new-task-form">
-                    <h2 style="color: green;">Popup Form New Task</h2> 
+                    <h2 style="color: green;">New Task</h2> 
                         <form class="form-container"> 
                             <label  class="form-label" 
                                     for="name">Task Name</label> 
