to do list meets TOP requirements, ready for final refactor and code clean up

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
         <div class="content" id="content">
             <div class="sidebar">
                 <h2 class="sidebar-header"></h2>
-                <label for="new-project">Start A New Project</label>
+                <label for="new-project" id="new-project-label">New Project</label>
                 <div id="project-init-field">
-                    <input id="new-project" type="text" placeholder="New Project" name="new-project">
+                    <input id="new-project" type="text" placeholder="Project Name" name="new-project">
                     <input type="submit" value="+" id="new-project-init-input">
                 </div>
                 <ul class="project-list" id="project-list" ></ul>
@@ -24,6 +24,12 @@
                 <div class="tasks-header">
                     <span id="task-title-icon-combo"><h2 class="tasks-title" id="tasks-title"></h2><img id="title-edit-icon"></span>
                     <button id="add-task">Add Task</button>
+                </div>
+                <div class="tasks-header task-legend">
+                    <p class="task-name">Name</p>
+                    <p class="task-description">Description</p>
+                    <p class="task-dueDate">Due</p>
+                    <p class="task-priority">Priority</p>
                 </div>
                 <ul id="tasks-display"></ul>
             </div>
